testNG html report, listener, attach screenshot

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
                     <includes>
                         <include>*.*</include>
                     </includes>
+                    <!--properties>
+                        <property>
+                            <name>listener</name>
+                            <value>testNgLearning.listeners.TestNGListenerManager</value>
+                        </propert>
+                    </properties-->
                 </configuration>
             </plugin>
         </plugins>
