--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
-        <version>4.0.0-beta-3</version>
+        <version>4.1.0</version>
     </dependency>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
